@@ -28,6 +28,8 @@ Core and Builtins
 
 - Issue #7072: isspace(0xa0) is true on Mac OS X
 
+- Issue #8404: Fixed set operations on dictionary views.
+
 Library
 -------
 
